Small change to DNSKEY RR